# assignment_3

./: CMakeLists.txt  README.md  VM.ysc
VendMachine/: Doxyfile
VendMachine/html/: VM_8h.html  VM_8h__dep__incl.dot  VM_8h_source.html  VM__required_8h.html  VM__required_8h__incl.dot  VM__required_8h_source.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e6a870eb2e98227d7e06896f3f119908.html  files.html  globals.html  globals_enum.html  globals_func.html  graph_legend.html  index.html  sc__types_8h_source.html  structVM.html  structVMIfaceBut.html  structVMInternal.html
VendMachine/html/search/: all_0.js  classes_0.js  enums_0.js  files_0.js  functions_0.js  searchdata.js
VendMachine/src/: sc_types.h
VendMachine/src-gen/: VM.c  VM.h  VM_required.h
app/: main.c
html/: dir_d422163b96683743ed3963d4aac17747.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8c.html
